--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </h2>
         <p>
 تمرینهای این
-<a href="https://mathdept.iut.ac.ir/sites/mathdept/files/files/TAMRIN.pdf">دفترچه</a>
+<a href="takhte/TAMRIN.pdf">دفترچه</a>
             متناسب با سطح انتظارات مدرسان از دانشجویان هستند. به دانشجویان توصیه می‌کنیم که به موازات کلاس درس، حتماً
             به حل این تمرینها نیز همت بگمارند.
         </p>
