--- a/index.html
+++ b/index.html
@@ -32,20 +32,23 @@
         <div class="clear"></div>
     </div>
     <div id="content" dir="rtl">
-        <p id="update-time" dir="ltr"> آخرین روزآمد: یکشنبه، ۷ بهمن، ساعت ۱۲:۳۰</p>
+        <p id="update-time" dir="ltr"> آخرین روزآمد: شنبه، ۱۳ بهمن، ساعت ۱۰:۴۰</p>
         <h2 class="title">اطلاعیه‌ها</h2>
         <p>
         <ul>
             <li class="imp-text">
-                <b>
                 هر اطلاعیه‌ای که به درس مربوط باشد (حتی اگر سر کلاسها گفته نشود)‌
-                در این تارنما قرار خواهد گرفت و مسئولیت عدم توجه به این وبسایت بر عهده‌ی شخص دانشجو خواهد بود. اطلاعیه‌های جدید با رنگ قرمز مشخص خواهند شد.
-                </b>
+                در این تارنما قرار خواهد گرفت و مسئولیت عدم توجه به این وبسایت بر عهده‌ی شخص دانشجو خواهد بود.
+                اطلاعیه‌های جدید با رنگ قرمز مشخص خواهند شد.
             </li>
-    </ul>
+            <li class="imp-text">
+                برای آشنایی با سرفصلها، منابع و نحوه‌ی ارزشیابی، این
+                <a href="messages/courseoutlineforstudents.pdf">پیوند</a>
+                را مطالعه فرمائید.
+            </li>
+        </ul>
         </p>
         <hr class="content-box">
-
 
 
         <h2 class="title">
@@ -53,40 +56,44 @@
         </h2>
         <p>
             در درس ریاضی ۲، دو مفهوم اصلی در حسابان، یعنی
-             دیفرانسیل و انتگرال را برای توابع چندمتغیره مطالعه خواهیم کرد.
+            دیفرانسیل و انتگرال را برای توابع چندمتغیره مطالعه خواهیم کرد.
             در این درس، همچنین با نحوه‌ی رسم توابع
-            در فضای سه‌بُعدی آشنا خواهیم شد و خواهیم دید که چگونه، با مطالعه‌ی جبری مشتق این توابع، می‌توان رفتار هندسی آنها را تعبیر کرد.
-در ریاضی ۱ با انتگرالگیری آشنا شده‌ایم؛ در این درس با انتگرالهای دوگانه و سه‌گانه و انتگرالگیری روی سطح
+            در فضای سه‌بُعدی آشنا خواهیم شد و خواهیم دید که چگونه، با مطالعه‌ی جبری مشتق این توابع، می‌توان رفتار هندسی
+            آنها را تعبیر کرد.
+            در ریاضی ۱ با انتگرالگیری آشنا شده‌ایم؛ در این درس با انتگرالهای دوگانه و سه‌گانه و انتگرالگیری روی سطح
             آشنا خواهیم شد.
-            در پایان با قضایای پرکاربردِ گرین و استوکس آشنا خواهیم شد که هر یک روشی برای محاسبه‌ی انتگرالهای چندگانه به دست می‌دهند.
+            در پایان با قضایای پرکاربردِ گرین و استوکس آشنا خواهیم شد که هر یک روشی برای محاسبه‌ی انتگرالهای چندگانه به
+            دست می‌دهند.
         </p>
         <p>
-            به دانشجویان پیشنهاد می‌کنم که با تارنمای زیر، برای رسم رویه‌های سه‌بعدی آشنا شوند. در این تارنما علاوه بر رسم
-            رویه‌‌ها، می‌توان منحنی‌های تراز آنها را نیز کشید. به علاوه، رسم منحنی‌های فضائی نیز در این تارنما بسیار آسان است:
+            به دانشجویان پیشنهاد می‌کنم که با تارنمای زیر، برای رسم رویه‌های سه‌بعدی آشنا شوند. در این تارنما علاوه بر
+            رسم
+            رویه‌‌ها، می‌توان منحنی‌های تراز آنها را نیز کشید. به علاوه، رسم منحنی‌های فضائی نیز در این تارنما بسیار
+            آسان است:
             <br>
             <a href="https://www.monroecc.edu/faculty/paulseeburger/calcnsf/CalcPlot3D/">تارنما برای رسم</a>
-<br>
+            <br>
             همچنین
-مطلوب است که دانشجویان، وقتی  برای
+            مطلوب است که دانشجویان، وقتی برای
             آشنائی با نرم‌افزارِ میپل،
-            به لاتین «maple»، بگذارند. رسم رویه‌ها و منحنی‌های تراز، از کوچکترین کاربردهای میپل است. میپل نه تنها برای محاسبات (مشتق، انتگرال و غیره) سودمند است،
+            به لاتین «maple»، بگذارند. رسم رویه‌ها و منحنی‌های تراز، از کوچکترین کاربردهای میپل است. میپل نه تنها برای
+            محاسبات (مشتق، انتگرال و غیره) سودمند است،
             بلکه این نرم‌افزار در واقع یک زبان برنامه‌نویسی است که یادگیری آن برای کاربردهای مهندسی توصیه می‌شود.
         </p>
         <p>
             برای آشنایی با سرفصلها، منابع و نحوه‌ی ارزشیابی، این
-            پیوند
+            <a href="messages/courseoutlineforstudents.pdf">پیوند</a>
             را مطالعه فرمائید.
         </p>
         <hr class="content-box">
-
 
 
         <h2 class="title">
             دفترچه تمرین
         </h2>
         <p>
-تمرینهای این
-<a href="takhte/TAMRIN.pdf">دفترچه</a>
+            تمرینهای این
+            <a href="takhte/TAMRIN.pdf">دفترچه</a>
             متناسب با سطح انتظارات مدرسان از دانشجویان هستند. به دانشجویان توصیه می‌کنیم که به موازات کلاس درس، حتماً
             به حل این تمرینها نیز همت بگمارند.
         </p>
@@ -94,17 +101,17 @@
         <h2 class="title">
             مربوط به گروه دکتر خانی
         </h2>
-<p>
-    در این
-    پیوند
-<a href="https://mohsen-khani.github.io/riyazi2962/jozve/riyazi2kol.pdf">
-    جزوه‌ی تدریس پییشین
-</a>
-    را قرار داده‌ام. این ترم لزوماً این جزوه را تدریس نخواهم کرد، ولی تخته‌های درس در زیر قرار
-    خواهند گرفت که در کنار جزوه،
-      باید مورد مطالعه قرار گیرند.
-    امیدوارم در پایان ترم جزوه را با افزودن مطالب جدید تکمیل کنم.
-</p>
+        <p>
+            در این
+            پیوند
+            <a href="https://mohsen-khani.github.io/riyazi2962/jozve/riyazi2kol.pdf">
+                جزوه‌ی تدریس پییشین
+            </a>
+            را قرار داده‌ام. این ترم لزوماً این جزوه را تدریس نخواهم کرد، ولی تخته‌های درس در زیر قرار
+            خواهند گرفت که در کنار جزوه،
+            باید مورد مطالعه قرار گیرند.
+            امیدوارم در پایان ترم جزوه را با افزودن مطالب جدید تکمیل کنم.
+        </p>
     </div>
 </div>
 </body>
