changed sar to dar

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <p>
         <ul>
             <li class="imp-text">
-                هر اطلاعیه‌ای که به درس مربوط باشد (حتی اگر سر کلاسها گفته نشود)‌
+                هر اطلاعیه‌ای که به درس مربوط باشد (حتی اگر در کلاسها گفته نشود)‌
                 در این تارنما قرار خواهد گرفت و مسئولیت عدم توجه به این وبسایت بر عهده‌ی شخص دانشجو خواهد بود.
                 اطلاعیه‌های جدید با رنگ قرمز مشخص خواهند شد.
             </li>
