jal1 added link

--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
             خواهند گرفت که در کنار جزوه،
             باید مورد مطالعه قرار گیرند.
             امیدوارم در پایان ترم جزوه را با افزودن مطالب جدید تکمیل کنم.
+            <ul>
+        <li><a href="takhte/r2972jal1.pdf">جلسه‌ی اول، مقدمه و رسم استوانه‌ها</a> </li>
+    </ul>
         </p>
 
     </div>
