--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
             امیدوارم در پایان ترم جزوه را با افزودن مطالب جدید تکمیل کنم.
             <ul>
         <li><a href="takhte/r2972jal1.pdf">جلسه‌ی اول، مقدمه و رسم استوانه‌ها</a> </li>
+        <li><a href="takhte/r2972jal2.pdf">جلسه‌ی دوم، رسم سهمی‌وار، بیضی‌وار و رویه‌های حاصل از دوران</a> </li>
     </ul>
         </p>
 
