--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
             <ul>
         <li><a href="takhte/r2972jal1.pdf">جلسه‌ی اول، مقدمه و رسم استوانه‌ها</a> </li>
         <li><a href="takhte/r2972jal2.pdf">جلسه‌ی دوم، رسم سهمی‌وار، بیضی‌وار و رویه‌های حاصل از دوران</a> </li>
+        <li><a href="takhte/r2972jal3.pdf">جلسه‌ی سوم، هذلولوی‌های یک و دو پارچه</a> </li>
     </ul>
         </p>
 
