--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
         <li><a href="takhte/r2972jal1.pdf">جلسه‌ی اول، مقدمه و رسم استوانه‌ها</a> </li>
         <li><a href="takhte/r2972jal2.pdf">جلسه‌ی دوم، رسم سهمی‌وار، بیضی‌وار و رویه‌های حاصل از دوران</a> </li>
         <li><a href="takhte/r2972jal3.pdf">جلسه‌ی سوم، هذلولوی‌های یک و دو پارچه</a> </li>
+        <li><a href="takhte/r2972jal4.pdf">جلسه‌ی چهارم، رسم سهم‌وار هزلولوی و شروع توابع</a> </li>
     </ul>
         </p>
 
