--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
         <li><a href="takhte/r2972jal3.pdf">جلسه‌ی سوم، هذلولوی‌های یک و دو پارچه</a> </li>
         <li><a href="takhte/r2972jal4.pdf">جلسه‌ی چهارم، رسم سهم‌وار هزلولوی و شروع توابع</a> </li>
         <li><a href="takhte/r2972jal5.pdf">جلسه‌ی پنجم، توابع دو متغیره و تعریف حد</a> </li>
+        <li><a href="takhte/r2972jal6.pdf">جلسه‌ی ششم، ادامه‌ی حد</a> </li>
     </ul>
         </p>
 
