changed Koushsesh to Jahandide

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <h5> دانشکده‌ی علوم ریاضی</h5>
                 <h5> دانشگاه صنعتی اصفهان</h5>
                 <h5>
-                    مدرسان: خانم و آقایانِ دکتر: اعتماد، جوادی، خانی، کوشش، منجگانی، نعمتی
+                    مدرسان: خانم و آقایانِ دکتر: اعتماد، جهاندیده، جوادی، خانی، منجگانی، نعمتی
                 </h5>
             </div>
         </div>
