--- a/index.html
+++ b/index.html
@@ -37,7 +37,20 @@
         <h2 class="title">اطلاعیه‌ها</h2>
         <p>
         <ul>
-            <li class="imp-text">
+        <li class="imp-text">
+            دستیاران آموزشی با دو نوع فعالیت در خدمت دانشجویان ریاضی ۲ خواهند بود: اتاق رفع اشکال، و کلاس حل تمرین.
+            اتاق رفع اشکال مخصوص دانشجویانی است که احیاناً بخشهایی از درس را متوجه نشده‌اند و نیاز به توضیح بیشتر دارند. این اتاق در طبقه‌ی پایین دانشکده‌ی ریاضی واقع است.
+            کلاس حل تمرین در هفته‌های نزدیک به کوئیزها و امتحانات دایر خواهد بود. برنامه‌ی دقیق گروه دستیاران آموزشی را در این
+            <a href="https://mohsen-khani.github.io/ta-group/">پيــوند</a>
+            مشاهده کنید.
+        </li>
+        <li class="imp-text">
+            از شنبه‌ی هفته‌ی آینده (۴ اسفند) اتاق رفع اشکال فعال خواهد شد.
+            لطفاً برنامه‌ی کامل اتاق رفع اشکال و کلاسهای حل تمرین را در این
+            <a href="https://mohsen-khani.github.io/ta-group/">پيــوند</a>
+            مشاهده کنید.
+        </li>
+            <li>
                 هر اطلاعیه‌ای که به درس مربوط باشد (حتی اگر در کلاسها گفته نشود)‌
                 در این تارنما قرار خواهد گرفت و مسئولیت عدم توجه به این وبسایت بر عهده‌ی شخص دانشجو خواهد بود.
                 اطلاعیه‌های جدید با رنگ قرمز مشخص خواهند شد.
@@ -119,6 +132,7 @@
         <li><a href="takhte/r2972jal4.pdf">جلسه‌ی چهارم، رسم سهم‌وار هزلولوی و شروع توابع</a> </li>
         <li><a href="takhte/r2972jal5.pdf">جلسه‌ی پنجم، توابع دو متغیره و تعریف حد</a> </li>
         <li><a href="takhte/r2972jal6.pdf">جلسه‌ی ششم، ادامه‌ی حد</a> </li>
+        <li><a href="takhte/r2972jal7.pdf">حد داشتن روی مسیرهای مختلف</a> </li>
     </ul>
         </p>
 
