--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@
         <li><a href="takhte/r2972jal4.pdf">جلسه‌ی چهارم، رسم سهم‌وار هزلولوی و شروع توابع</a> </li>
         <li><a href="takhte/r2972jal5.pdf">جلسه‌ی پنجم، توابع دو متغیره و تعریف حد</a> </li>
         <li><a href="takhte/r2972jal6.pdf">جلسه‌ی ششم، ادامه‌ی حد</a> </li>
-        <li><a href="takhte/r2972jal7.pdf">حد داشتن روی مسیرهای مختلف</a> </li>
+        <li><a href="takhte/r2972jal7.pdf">چلسه‌ی هفتم، حد داشتن روی مسیرهای مختلف</a> </li>
+        <li><a href="takhte/r2972jal8.pdf">جلسه‌ی هشتم، پیوستگی</a> </li>
     </ul>
         </p>
 
