--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
         <li><a href="takhte/r2972jal7.pdf">چلسه‌ی هفتم، حد داشتن روی مسیرهای مختلف</a> </li>
         <li><a href="takhte/r2972jal8.pdf">جلسه‌ی هشتم، پیوستگی</a> </li>
         <li><a href="takhte/r2972jal9.pdf">جلسه‌ی نهم، تمرین پیوستگی و حد داشتن روی مسیرهای مختلف</a> </li>
+        <li><a href="takhte/r2972jal10.pdf">جلسه‌ی دهم، مشتقات جزئی</a> </li>
     </ul>
         </p>
 
