--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
         <li><a href="takhte/r2972jal8.pdf">جلسه‌ی هشتم، پیوستگی</a> </li>
         <li><a href="takhte/r2972jal9.pdf">جلسه‌ی نهم، تمرین پیوستگی و حد داشتن روی مسیرهای مختلف</a> </li>
         <li><a href="takhte/r2972jal10.pdf">جلسه‌ی دهم، مشتقات جزئی</a> </li>
+        <li><a href="takhte/r2972jal11.pdf">جلسه‌ی یازدهم، مشتقات جزئی مراتب بالاتر</a> </li>
     </ul>
         </p>
 
