--- a/index.html
+++ b/index.html
@@ -38,13 +38,19 @@
         <p>
         <ul>
         <li class="imp-text">
+            کلاس حل تمرین ویژه‌ی کوئیز اول (مورخ شنبه ۱۸ اسفند)
+            از روز یکشنبه ۱۲ اسفند تا چهارشنبه ۱۵ اسفند، ساعت ۱۲ تا ۱۳ در تالار ۳ برگزار خواهد شد. برنامه‌ی دقیق گروه دستیاران آموزشی را در این
+            <a href="https://mohsen-khani.github.io/ta-group/">پيــوند</a>
+            مشاهده کنید.
+        </li>
+        <li>
             دستیاران آموزشی با دو نوع فعالیت در خدمت دانشجویان ریاضی ۲ خواهند بود: اتاق رفع اشکال، و کلاس حل تمرین.
             اتاق رفع اشکال مخصوص دانشجویانی است که احیاناً بخشهایی از درس را متوجه نشده‌اند و نیاز به توضیح بیشتر دارند. این اتاق در طبقه‌ی پایین دانشکده‌ی ریاضی واقع است.
             کلاس حل تمرین در هفته‌های نزدیک به کوئیزها و امتحانات دایر خواهد بود. برنامه‌ی دقیق گروه دستیاران آموزشی را در این
             <a href="https://mohsen-khani.github.io/ta-group/">پيــوند</a>
             مشاهده کنید.
         </li>
-        <li class="imp-text">
+        <li>
             از شنبه‌ی هفته‌ی آینده (۴ اسفند) اتاق رفع اشکال فعال خواهد شد.
             لطفاً برنامه‌ی کامل اتاق رفع اشکال و کلاسهای حل تمرین را در این
             <a href="https://mohsen-khani.github.io/ta-group/">پيــوند</a>
@@ -55,7 +61,7 @@
                 در این تارنما قرار خواهد گرفت و مسئولیت عدم توجه به این وبسایت بر عهده‌ی شخص دانشجو خواهد بود.
                 اطلاعیه‌های جدید با رنگ قرمز مشخص خواهند شد.
             </li>
-            <li class="imp-text">
+            <li>
                 برای آشنایی با سرفصلها، منابع و نحوه‌ی ارزشیابی، این
                 <a href="messages/courseoutlineforstudents.pdf">پیوند</a>
                 را مطالعه فرمائید.
