--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
         <li><a href="takhte/r2972jal9.pdf">جلسه‌ی نهم، تمرین پیوستگی و حد داشتن روی مسیرهای مختلف</a> </li>
         <li><a href="takhte/r2972jal10.pdf">جلسه‌ی دهم، مشتقات جزئی</a> </li>
         <li><a href="takhte/r2972jal11.pdf">جلسه‌ی یازدهم، مشتقات جزئی مراتب بالاتر</a> </li>
+        <li><a href="takhte/r2972jal12.pdf">جلسه‌ی دوازدهم، صفحه‌ی مماس</a> </li>
     </ul>
         </p>
 
