--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
         <li><a href="takhte/r2972jal10.pdf">جلسه‌ی دهم، مشتقات جزئی</a> </li>
         <li><a href="takhte/r2972jal11.pdf">جلسه‌ی یازدهم، مشتقات جزئی مراتب بالاتر</a> </li>
         <li><a href="takhte/r2972jal12.pdf">جلسه‌ی دوازدهم، صفحه‌ی مماس</a> </li>
+        <li><a href="takhte/r2972jal13.pdf">جلسه‌ی سیزدهم، دیفرانسیل‌پذیری</a> </li>
     </ul>
         </p>
 
