--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
         <p>
         <ul>
         <li class="imp-text">
+            <a href="takhte/tamrin%20001.jpg">تمرین‌های</a>
+            حل شده در کلاس حل تمرین ویژه‌ی کوئیز در دو روز اول
+        </li>
+        <li class="imp-text">
             کلاس حل تمرین ویژه‌ی کوئیز اول (مورخ شنبه ۱۸ اسفند)
             از روز یکشنبه ۱۲ اسفند تا چهارشنبه ۱۵ اسفند، ساعت ۱۲ تا ۱۳ در تالار ۳ برگزار خواهد شد. برنامه‌ی دقیق گروه دستیاران آموزشی را در این
             <a href="https://mohsen-khani.github.io/ta-group/">پيــوند</a>
