--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
         <li><a href="takhte/r2972jal11.pdf">جلسه‌ی یازدهم، مشتقات جزئی مراتب بالاتر</a> </li>
         <li><a href="takhte/r2972jal12.pdf">جلسه‌ی دوازدهم، صفحه‌ی مماس</a> </li>
         <li><a href="takhte/r2972jal13.pdf">جلسه‌ی سیزدهم، دیفرانسیل‌پذیری</a> </li>
+        <li><a href="takhte/r2972jal14.pdf">جلسه‌ی چهاردهم، قاعده‌ی زنجیره‌ای</a> </li>
     </ul>
         </p>
 
