--- a/index.html
+++ b/index.html
@@ -38,8 +38,13 @@
         <p>
         <ul>
         <li class="imp-text">
-            <a href="takhte/tamrin%20001.jpg">تمرین‌های</a>
-            حل شده در کلاس حل تمرین ویژه‌ی کوئیز در دو روز اول
+            تمرین‌های حل شده‌ی
+            <a href="takhte/tamrin%20001.jpg">اول</a>
+            ،
+            <a href="takhte/tamrin2%20001.jpg">دوم</a>
+            و
+            <a href="takhte/tamrin%203%20001.jpg">سوم</a>
+           در کلاس حل تمرین ویژه‌ی کوئیز
         </li>
         <li class="imp-text">
             کلاس حل تمرین ویژه‌ی کوئیز اول (مورخ شنبه ۱۸ اسفند)
@@ -150,6 +155,7 @@
         <li><a href="takhte/r2972jal12.pdf">جلسه‌ی دوازدهم، صفحه‌ی مماس</a> </li>
         <li><a href="takhte/r2972jal13.pdf">جلسه‌ی سیزدهم، دیفرانسیل‌پذیری</a> </li>
         <li><a href="takhte/r2972jal14.pdf">جلسه‌ی چهاردهم، قاعده‌ی زنجیره‌ای</a> </li>
+        <li><a href="takhte/r2972jal15.pdf">جلسه‌ی پانزدهم، مشتق‌گیری ضمنی</a> </li>
     </ul>
         </p>
 
