--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
         <li><a href="takhte/r2972jal13.pdf">جلسه‌ی سیزدهم، دیفرانسیل‌پذیری</a> </li>
         <li><a href="takhte/r2972jal14.pdf">جلسه‌ی چهاردهم، قاعده‌ی زنجیره‌ای</a> </li>
         <li><a href="takhte/r2972jal15.pdf">جلسه‌ی پانزدهم، مشتق‌گیری ضمنی</a> </li>
+        <li><a href="takhte/r2972jal16.pdf">جلسه‌ی شانزدهم، مشتقات سوئی</a> </li>
     </ul>
         </p>
 
