--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
         <li><a href="takhte/r2972jal14.pdf">جلسه‌ی چهاردهم، قاعده‌ی زنجیره‌ای</a> </li>
         <li><a href="takhte/r2972jal15.pdf">جلسه‌ی پانزدهم، مشتق‌گیری ضمنی</a> </li>
         <li><a href="takhte/r2972jal16.pdf">جلسه‌ی شانزدهم، مشتقات سوئی</a> </li>
+        <li><a href="takhte/r2972jal17.pdf">جلسه‌ی هفدهم، ادامه‌ی مشتقات سوئی</a> </li>
     </ul>
         </p>
 
