--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
         <li><a href="takhte/r2972jal15.pdf">جلسه‌ی پانزدهم، مشتق‌گیری ضمنی</a> </li>
         <li><a href="takhte/r2972jal16.pdf">جلسه‌ی شانزدهم، مشتقات سوئی</a> </li>
         <li><a href="takhte/r2972jal17.pdf">جلسه‌ی هفدهم، ادامه‌ی مشتقات سوئی</a> </li>
+        <li><a href="takhte/r2972jal18.pdf">جلسه‌ی هجدهم، مشتقات سوئی و بردار گرادیان</a> </li>
     </ul>
         </p>
 
