--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
         <li><a href="takhte/r2972jal16.pdf">جلسه‌ی شانزدهم، مشتقات سوئی</a> </li>
         <li><a href="takhte/r2972jal17.pdf">جلسه‌ی هفدهم، ادامه‌ی مشتقات سوئی</a> </li>
         <li><a href="takhte/r2972jal18.pdf">جلسه‌ی هجدهم، مشتقات سوئی و بردار گرادیان</a> </li>
+        <li><a href="takhte/r2982jal19.pdf">جلسه‌ی نوزدهم، خم‌های فضایی و بسط تیلور</a> </li>
     </ul>
         </p>
 
