--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
         <li><a href="takhte/r2972jal18.pdf">جلسه‌ی هجدهم، مشتقات سوئی و بردار گرادیان</a> </li>
         <li><a href="takhte/r2982jal19.pdf">جلسه‌ی نوزدهم، خم‌های فضایی و بسط تیلور</a> </li>
         <li><a href="takhte/r2982jal20.pdf">جلسه‌ی بیستم، صفحات مماس بر رویه‌های تراز</a> </li>
+        <li><a href="takhte/r2982jal21.pdf">جلسه‌ی بیست و یکم، صفحه‌ی مماس و بردار گرادیان</a> </li>
     </ul>
         </p>
 
