--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
         <li><a href="takhte/r2982jal19.pdf">جلسه‌ی نوزدهم، خم‌های فضایی و بسط تیلور</a> </li>
         <li><a href="takhte/r2982jal20.pdf">جلسه‌ی بیستم، صفحات مماس بر رویه‌های تراز</a> </li>
         <li><a href="takhte/r2982jal21.pdf">جلسه‌ی بیست و یکم، صفحه‌ی مماس و بردار گرادیان</a> </li>
+        <li><a href="takhte/r2982jal22.pdf">جلسه‌ی بیست و دوم، اکسترمم‌های نسبی</a> </li>
     </ul>
         </p>
 
