--- a/index.html
+++ b/index.html
@@ -163,6 +163,8 @@
         <li><a href="takhte/r2982jal20.pdf">جلسه‌ی بیستم، صفحات مماس بر رویه‌های تراز</a> </li>
         <li><a href="takhte/r2982jal21.pdf">جلسه‌ی بیست و یکم، صفحه‌ی مماس و بردار گرادیان</a> </li>
         <li><a href="takhte/r2982jal22.pdf">جلسه‌ی بیست و دوم، اکسترمم‌های نسبی</a> </li>
+        <li><a href="takhte/r2982jal23.pdf">جلسه‌ی بیست و سوم، ادامه‌ی اکسترمم‌هانسبی</a> </li>
+        <li><a href="takhte/r2982jal24.pdf">جلسه‌ی بیست و چهارم، ادامه‌ی اکسترمم‌های مطلق</a> </li>
     </ul>
         </p>
 
