--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
         <li><a href="takhte/r2982jal22.pdf">جلسه‌ی بیست و دوم، اکسترمم‌های نسبی</a> </li>
         <li><a href="takhte/r2982jal23.pdf">جلسه‌ی بیست و سوم، ادامه‌ی اکسترمم‌هانسبی</a> </li>
         <li><a href="takhte/r2982jal24.pdf">جلسه‌ی بیست و چهارم، ادامه‌ی اکسترمم‌های مطلق</a> </li>
+        <li><a href="takhte/r2982jal25.pdf">جلسه‌ی بیست و پنجم، روش ضرایب لاگرانژ برای تعیین اکسترمم‌های مطلقِ مقید</a> </li>
     </ul>
         </p>
 
