--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
         <li><a href="takhte/r2982jal24.pdf">جلسه‌ی بیست و چهارم، ادامه‌ی اکسترمم‌های مطلق</a> </li>
         <li><a href="takhte/r2982jal25.pdf">جلسه‌ی بیست و پنجم، روش ضرایب لاگرانژ برای تعیین اکسترمم‌های مطلقِ مقید</a> </li>
         <li><a href="takhte/r2982jal26.pdf">جلسه‌ی بیست و ششم، انتگرال دوگانه</a> </li>
+        <li><a href="takhte/r2982jal27.pdf">جلسه‌ی بیست و هفتم، انتگرال دوگانه نواحی نوع اول و دوم</a> </li>
     </ul>
         </p>
 
