--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
         <li><a href="takhte/r2982jal25.pdf">جلسه‌ی بیست و پنجم، روش ضرایب لاگرانژ برای تعیین اکسترمم‌های مطلقِ مقید</a> </li>
         <li><a href="takhte/r2982jal26.pdf">جلسه‌ی بیست و ششم، انتگرال دوگانه</a> </li>
         <li><a href="takhte/r2982jal27.pdf">جلسه‌ی بیست و هفتم، انتگرال دوگانه نواحی نوع اول و دوم</a> </li>
+        <li><a href="takhte/r2982jal28.pdf">جلسه‌ی بیست و هشتم، انتگرال دوگانه در مختصات قطبی</a> </li>
     </ul>
         </p>
 
