--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
         <li><a href="takhte/r2982jal27.pdf">جلسه‌ی بیست و هفتم، انتگرال دوگانه نواحی نوع اول و دوم</a> </li>
         <li><a href="takhte/r2982jal28.pdf">جلسه‌ی بیست و هشتم، انتگرال دوگانه در مختصات قطبی</a> </li>
         <li><a href="takhte/r2982jal29.pdf">جلسه‌ی بیست و نهم، تغییر متغیر</a> </li>
+        <li><a href="takhte/r2982jal30.pdf">جلسه‌ی سی‌ام، انتگرال‌های سه‌گانه</a> </li>
     </ul>
         </p>
 
