etelaeye kelas va quiz

--- a/index.html
+++ b/index.html
@@ -38,6 +38,16 @@
         <p>
         <ul>
         <li class="imp-text">
+            مربوط به گروه دکتر خانی: کلاس ریاضی عمومی ۲ روز چهارشنبه ۲۵ اردیبهشت ماه از ساعت ۸ تا ۹ در تالار ۴ و از ساعت ۹ تا ۱۰ در تالار ۵ برگزار خواهد شد.
+        </li>
+        <li class="imp-text">
+            <a href="messages/miyan.pdf">سوالات میانترم</a>
+            ،
+            <a href="messages/r2miyanpasox.pdf">پاسخ سوالات ۱ و ۲ میانترم</a>
+            ،
+            <a href="messages/miyan-pasox-3-4.pdf">پاسخ سوالات ۳ و ۴ میانترم</a>
+        </li>
+        <li class="imp-text">
             تمرین‌های حل شده‌ی
             <a href="takhte/tamrin%20001.jpg">اول</a>
             ،
