etelaeye kelas va quiz-eslah

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
             ،
             <a href="messages/r2miyanpasox.pdf">پاسخ سوالات ۱ و ۲ میانترم</a>
             ،
-            <a href="messages/miyan-pasox-3-4.pdf">پاسخ سوالات ۳ و ۴ میانترم</a>
+            <a href="messages/miyan-pasox-3-4.pdf">پاسخ سوالات ۳ و ۴ میانترم</a>.
+            لطفاً پیش از مراجعه برای اعتراض، حتماً پاسخ‌ نامه‌ها را مطالعه کنید.
         </li>
         <li class="imp-text">
             تمرین‌های حل شده‌ی
