--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
         <li><a href="takhte/r2982jal28.pdf">جلسه‌ی بیست و هشتم، انتگرال دوگانه در مختصات قطبی</a> </li>
         <li><a href="takhte/r2982jal29.pdf">جلسه‌ی بیست و نهم، تغییر متغیر</a> </li>
         <li><a href="takhte/r2982jal30.pdf">جلسه‌ی سی‌ام، انتگرال‌های سه‌گانه</a> </li>
+        <li><a href="takhte/r2982jal31.pdf">جلسه‌ی سی‌ویکم، انتگرال سه‌گانه و مختصات استوانه‌ای</a> </li>
     </ul>
         </p>
 
