--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
         <li><a href="takhte/r2982jal29.pdf">جلسه‌ی بیست و نهم، تغییر متغیر</a> </li>
         <li><a href="takhte/r2982jal30.pdf">جلسه‌ی سی‌ام، انتگرال‌های سه‌گانه</a> </li>
         <li><a href="takhte/r2982jal31.pdf">جلسه‌ی سی‌ویکم، انتگرال سه‌گانه و مختصات استوانه‌ای</a> </li>
+        <li><a href="takhte/r2982jal32.pdf">جلسه‌ی سی‌ودوم، حل چند تمرین از مختصات استوانه‌ای</a> </li>
     </ul>
         </p>
 
