--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
         <li><a href="takhte/r2982jal30.pdf">جلسه‌ی سی‌ام، انتگرال‌های سه‌گانه</a> </li>
         <li><a href="takhte/r2982jal31.pdf">جلسه‌ی سی‌ویکم، انتگرال سه‌گانه و مختصات استوانه‌ای</a> </li>
         <li><a href="takhte/r2982jal32.pdf">جلسه‌ی سی‌ودوم، حل چند تمرین از مختصات استوانه‌ای</a> </li>
+        <li><a href="takhte/r2982jal33.pdf">جلسه‌ی سی‌وسوم، مختصات کُروی</a> </li>
     </ul>
         </p>
 
