--- a/index.html
+++ b/index.html
@@ -170,6 +170,8 @@
         <li><a href="takhte/r2982jal31.pdf">جلسه‌ی سی‌ویکم، انتگرال سه‌گانه و مختصات استوانه‌ای</a> </li>
         <li><a href="takhte/r2982jal32.pdf">جلسه‌ی سی‌ودوم، حل چند تمرین از مختصات استوانه‌ای</a> </li>
         <li><a href="takhte/r2982jal33.pdf">جلسه‌ی سی‌وسوم، مختصات کُروی</a> </li>
+        <li><a href="takhte/r2982jal34.pdf">جلسه‌ی سی‌وچهارم، انتگرالگیری از توابع عددی روی خم‌ها</a> </li>
+        <li><a href="takhte/r2982jal35.pdf">جلسه‌ی سی‌وپنجم، انتگرالگیری از توابع برداری روی خم‌ها</a> </li>
     </ul>
         </p>
 
