--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
         <p>
         <ul>
         <li class="imp-text">
+            ویژه‌ی دانشجویان محترمی که به علت سیل نتوانسته‌اند در امتحان میان‌ترم شرکت کنند،‌ لطفاً برای برگزاری آزمون مجدد درس ریاضی عمومی ۲ تا تاریخ
+            ۳۱ اردیبهشت به آقای دکتر نعمتی (طبقه‌ی همکف دانشکده‌ی ریاضی) مراجعه بفرمایید.
+        </li>
+        <li class="imp-text">
             مربوط به گروه دکتر خانی: کلاس ریاضی عمومی ۲ روز چهارشنبه ۲۵ اردیبهشت ماه از ساعت ۸ تا ۹ در تالار ۴ و از ساعت ۹ تا ۱۰ در تالار ۵ برگزار خواهد شد.
         </li>
         <li class="imp-text">
