--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
         <li><a href="takhte/r2982jal34.pdf">جلسه‌ی سی‌وچهارم، انتگرالگیری از توابع عددی روی خم‌ها</a> </li>
         <li><a href="takhte/r2982jal35.pdf">جلسه‌ی سی‌وپنجم، انتگرالگیری از توابع برداری روی خم‌ها</a> </li>
         <li><a href="takhte/r2982jal36.pdf">جلسه‌ی سی‌وششم، قضیه‌ی گیرین</a> </li>
+        <li><a href="takhte/r2982jal37.pdf">جلسه‌ی سی‌وهفتم،انتگرال‌گیری از توابع عددی روی رویه</a> </li>
     </ul>
         </p>
 
