--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
         <p>
         <ul>
         <li class="imp-text">
+            امتحان مجدد میان‌ترم ویژه‌ی دانشجویان مناطق سیل‌زده (که در امتحان میان‌ترم نتوانسته‌اند شرکت کنند) روز یکشنبه
+            ۱۹ خرداد ساعت ۹ در کلاس ۱ برگزار می‌شود.
+        </li>
+        <li class="imp-text">
             ویژه‌ی دانشجویان محترمی که به علت سیل نتوانسته‌اند در امتحان میان‌ترم شرکت کنند،‌ لطفاً برای برگزاری آزمون مجدد درس ریاضی عمومی ۲ تا تاریخ
             ۳۱ اردیبهشت به آقای دکتر نعمتی (طبقه‌ی همکف دانشکده‌ی ریاضی) مراجعه بفرمایید.
         </li>
