proof of stokes

--- a/index.html
+++ b/index.html
@@ -176,8 +176,11 @@
         <li><a href="takhte/r2982jal33.pdf">جلسه‌ی سی‌وسوم، مختصات کُروی</a> </li>
         <li><a href="takhte/r2982jal34.pdf">جلسه‌ی سی‌وچهارم، انتگرالگیری از توابع عددی روی خم‌ها</a> </li>
         <li><a href="takhte/r2982jal35.pdf">جلسه‌ی سی‌وپنجم، انتگرالگیری از توابع برداری روی خم‌ها</a> </li>
-        <li><a href="takhte/r2982jal36.pdf">جلسه‌ی سی‌وششم، قضیه‌ی گیرین</a> </li>
+        <li><a href="takhte/r2982jal36.pdf">جلسه‌ی سی‌وششم، قضیه‌ی گرین</a> </li>
         <li><a href="takhte/r2982jal37.pdf">جلسه‌ی سی‌وهفتم،انتگرال‌گیری از توابع عددی روی رویه</a> </li>
+        <li> <a href="https://ocw.mit.edu/courses/mathematics/18-02sc-multivariable-calculus-fall-2010/4.-triple-integrals-and-surface-integrals-in-3-space/part-c-line-integrals-and-stokes-theorem/session-92-proof-of-stokes-theorem/MIT18_02SC_MNotes_v13.3.pdf>">
+            اثبات قضیه‌ی استوکس (برای دانشجویان علاقه‌مند).
+        </a> </li>
     </ul>
         </p>
 
