--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <ul>
         <li class="imp-text">
             امتحان مجدد میان‌ترم ویژه‌ی دانشجویان مناطق سیل‌زده (که در امتحان میان‌ترم نتوانسته‌اند شرکت کنند) روز یکشنبه
-            ۱۹ خرداد ساعت ۹ در کلاس ۱ برگزار می‌شود.
+            ۱۹ خرداد ساعت ۹ در کلاس ۱ در دانشکده‌ی ریاضی برگزار می‌شود.
         </li>
         <li class="imp-text">
             ویژه‌ی دانشجویان محترمی که به علت سیل نتوانسته‌اند در امتحان میان‌ترم شرکت کنند،‌ لطفاً برای برگزاری آزمون مجدد درس ریاضی عمومی ۲ تا تاریخ
