--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
         <li> <a href="https://ocw.mit.edu/courses/mathematics/18-02sc-multivariable-calculus-fall-2010/4.-triple-integrals-and-surface-integrals-in-3-space/part-c-line-integrals-and-stokes-theorem/session-92-proof-of-stokes-theorem/MIT18_02SC_MNotes_v13.3.pdf>">
             اثبات قضیه‌ی استوکس (برای دانشجویان علاقه‌مند).
         </a> </li>
+        <li><a href="takhte/r2982jal38.pdf">جلسه‌ی سی‌وهشتم،انتگرال‌گیری از توابع برداری روی رویه</a> </li>
     </ul>
         </p>
 
