--- a/index.html
+++ b/index.html
@@ -186,6 +186,8 @@
             اثبات قضیه‌ی استوکس (برای دانشجویان علاقه‌مند).
         </a> </li>
         <li><a href="takhte/r2982jal38.pdf">جلسه‌ی سی‌وهشتم،انتگرال‌گیری از توابع برداری روی رویه</a> </li>
+        <li><a href="takhte/r2982jal39.pdf">جلسه‌ی سی‌ونهم،قضیه‌ی استوکس</a> </li>
+        <li><a href="takhte/r2982jal40.pdf">جلسه‌ی چهلم، قضیه‌ی دیورژانس</a> </li>
     </ul>
         </p>
 
