--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
         <li><a href="takhte/r2982jal38.pdf">جلسه‌ی سی‌وهشتم،انتگرال‌گیری از توابع برداری روی رویه</a> </li>
         <li><a href="takhte/r2982jal39.pdf">جلسه‌ی سی‌ونهم،قضیه‌ی استوکس</a> </li>
         <li><a href="takhte/r2982jal40.pdf">جلسه‌ی چهلم، قضیه‌ی دیورژانس</a> </li>
+        <li><a href="takhte/r2982jal41.pdf">جلسه‌ی چهل‌ویکم، جمع‌بندی مبحث انتگرال</a> </li>
     </ul>
         </p>
 
