--- a/index.html
+++ b/index.html
@@ -38,17 +38,23 @@
         <p>
         <ul>
         <li class="imp-text">
+           <a href="takhte/payan-riyzai2-98.pdf">
+               پاسخ و بارم سوالات پایانترم
+           </a>
+            لطفاً پیش از مراجعه برای اعتراض پاسخ‌ها و بارم‌ها را به دقت مطالعه کنید.
+        </li>
+        <li>
             امتحان مجدد میان‌ترم ویژه‌ی دانشجویان مناطق سیل‌زده (که در امتحان میان‌ترم نتوانسته‌اند شرکت کنند) روز یکشنبه
             ۱۹ خرداد ساعت ۹ در کلاس ۱ برگزار می‌شود.
         </li>
-        <li class="imp-text">
+        <li>
             ویژه‌ی دانشجویان محترمی که به علت سیل نتوانسته‌اند در امتحان میان‌ترم شرکت کنند،‌ لطفاً برای برگزاری آزمون مجدد درس ریاضی عمومی ۲ تا تاریخ
             ۳۱ اردیبهشت به آقای دکتر نعمتی (طبقه‌ی همکف دانشکده‌ی ریاضی) مراجعه بفرمایید.
         </li>
-        <li class="imp-text">
+        <li>
             مربوط به گروه دکتر خانی: کلاس ریاضی عمومی ۲ روز چهارشنبه ۲۵ اردیبهشت ماه از ساعت ۸ تا ۹ در تالار ۴ و از ساعت ۹ تا ۱۰ در تالار ۵ برگزار خواهد شد.
         </li>
-        <li class="imp-text">
+        <li>
             <a href="messages/miyan.pdf">سوالات میانترم</a>
             ،
             <a href="messages/r2miyanpasox.pdf">پاسخ سوالات ۱ و ۲ میانترم</a>
@@ -56,7 +62,7 @@
             <a href="messages/miyan-pasox-3-4.pdf">پاسخ سوالات ۳ و ۴ میانترم</a>.
             لطفاً پیش از مراجعه برای اعتراض، حتماً پاسخ‌ نامه‌ها را مطالعه کنید.
         </li>
-        <li class="imp-text">
+        <li>
             کلاس حل تمرین ویژه‌ی کوئیز دوم (مورخ دوشنبه ۲۳ اردیبهشت):
             از روز شنبه ۲۱ اردیبهشت تا دوشنبه ۲۳ اردیبهشت، ساعت ۱۲ تا ۱۳ در تالار ۳ برگزار خواهد شد. برنامه‌ی دقیق گروه دستیاران آموزشی را در این
             <a href="https://mohsen-khani.github.io/ta-group/">پيــوند</a>
